--- a/Services.html
+++ b/Services.html
@@ -53,7 +53,7 @@
             padding: 30px;
             max-width: 900px;
             border-radius: 10px;
-            box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+            box-shadow: 0 10px 25px black;
         }
 
         .box h2 {
@@ -72,7 +72,6 @@
 
         /* Footer */
         footer {
-            background-color: #000;
             color: white;
             text-align: center;
             padding: 15px;
