--- a/Contact.html
+++ b/Contact.html
@@ -16,6 +16,8 @@
             color: white;
             text-align: center;
             padding: 30px 20px;
+            
+
         }
 
         header h1 {
@@ -53,7 +55,7 @@
             padding: 30px;
             max-width: 700px;
             border-radius: 10px;
-            box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+            box-shadow: 0 10px 25px black;
             text-align: center;
         }
 
@@ -89,6 +91,7 @@
 </head>
 
 <body>
+    
 
 <header>
     <h1>Contact</h1>
@@ -116,6 +119,17 @@
     <p>🐱 <strong>GitHub:</strong><br>
         <a href="#" target="_blank">github.com/2025tejasc-ctrl</a>
     </p>
+     <form>
+        <label for="fname">FIRST NAME:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">LAST NAME:</label><br>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="email">EMAIL:</label><br>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="fname">PASSWORD:</label><br>
+        <input type="password" id="password" name="password"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 
     <p>
         Open to learning, collaboration, internships,
