--- a/Services.html
+++ b/Services.html
@@ -88,7 +88,7 @@
 </header>
 
 <nav>
-    <a href="PORTFOLIO.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="About.html">About</a>
     <a href="Services.html">Services</a>
     <a href="Contact.html">Contact</a>
