--- a/About.html
+++ b/About.html
@@ -89,7 +89,7 @@
 </header>
 
 <nav>
-    <a href="PORTFOLIO.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="About.html">About</a>
     <a href="Services.html">Services</a>
     <a href="Contact.html">Contact</a>
